--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ rvm:
 before_script:
   - chmod +x ./script/cibuild # or do this locally and commit
 
+before_install:
+  - export GEM_HOME=$PWD/vendor/bundle/ruby/2.1.0
+  - gem install bundler
+
 # Assume bundler is being used, therefore
 # the 'install' step will run `bundle install` by default.
 script: ./script/cibuild
