fix: broken image url

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Jitendra Malakalapalli
 job_title: Full Stack Engineer
 email: jitendra8911@gmail.com
 description: I build web applications and server side applications at Egen. I love playing cricket and discovering new music. I am a passionate AI beginner.
-avatar: /assets/images/dp2.JPG
+avatar: /assets/images/dp2.jpg
 favicon: /favicon.ico
 twitter_handler: your_handler
 analytics_code: UA-XXXXXXX-2
