--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 name: Jitendra Malakalapalli
 job_title: Full Stack Engineer
 email: jitendra8911@gmail.com
-description: I build web applications and server side applications at Egen. I love playing cricket and discovering new music. I am a passionate AI beginner.
-avatar: /assets/images/dp2.jpg
+description: I build web and server side applications at Egen. I love playing cricket and discovering new music. I am a passionate AI beginner.
+avatar: /assets/images/profile-pic.jpg
 favicon: /favicon.ico
 twitter_handler: your_handler
 analytics_code: UA-XXXXXXX-2
