add advent of code article

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: Jitendra Malakalapalli
 job_title: Full Stack Engineer
 email: jitendra8911@gmail.com
-description: I build web and server side applications at Egen. I love playing cricket and discovering new music. I am a passionate AI beginner.
+description: I build web applications at Tempus Labs Inc. I love playing cricket and discovering new music. I am a passionate AI beginner.
 avatar: /assets/images/profile-pic.jpg
 favicon: /favicon.ico
 twitter_handler: your_handler
