--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ defaults:
       comments: "true"
 
 # Serving
-url: "https://jitendra8911.github.io/"
+url: "https://jitendra8911.github.io"
 baseurl: ""
 
 # Includes
